--- a/bookmarks/account/templates/account/dashboard.html
+++ b/bookmarks/account/templates/account/dashboard.html
@@ -2,5 +2,8 @@
 {% block title %} Главная {% endblock%}
 {% block content %}
     <h1>Главная страница</h1>
-    <p>Добро пожаловать на вашу страницу.</p>
+    <p>Добро пожаловать на вашу страницу.
+        Вы можете <a href="{% url "edit" %}">изменить ваш профиль</a>
+        или <a href="{% url "password_change" %}">изменить пароль.</a>
+    </p>
 {% endblock %}
