--- a/bookmarks/account/templates/account/register_done.html
+++ b/bookmarks/account/templates/account/register_done.html
@@ -5,3 +5,6 @@
     <p>Ваш аккаунт успешно создан.
     Теперь вы можете <a href="{% url "login" %}">ВОЙТИ</a>.</p>
 {% endblock %}
+
+<!--Login: Tester1-->
+<!--Password: Tester12345-->
