--- a/bookmarks/account/templates/registration/login.html
+++ b/bookmarks/account/templates/registration/login.html
@@ -5,7 +5,7 @@
     {% if form.errors %}
         <p>Your username and password didn't match.Please try again.</p>
     {% else %}
-        <p>Please, use the following form to log-in:</p>
+        <p>Используйте следующую форму для входа. Если у вас нет аккаунта <a href="{% url "register" %}"> можете зарегестрироваться!</a> </p>
     {% endif %}
         <div class="login-form">
         <form action="{% url 'login' %}" method="post">
